<resources>
    <string name="app_name">Fuhrparkmanager</string>
    <string name="carList">Übersicht Fahrzeuge</string>
    <string name="addCar">Fahrzeug hinzugfügen</string>
    <string name="showCalender">Kalender</string>
    <string name="book">Fahrzeug buchen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="logIn">Anmelden</string>
    <string name="carProducer">Anmelden</string>
    <string name="carModel">Anmelden</string>
    <string name="carNumber">Kennzeichen</string>
    <string name="buildYear">Baujahr</string>
    <string name="power">Leistung(PS)</string>
    <string name="passengers">Sitzplätze</string>
    <string name="style">Bauart</string>
    <string name="kilometers">Kilometerstand</string>
    <string name="register">Registrieren</string>
    <string name="reEnterPassword">Password wiederholen</string>
    <string name="backToLogin">Zurück zur Anmeldung</string>


</resources>